# GeminiBot

./: pyproject.toml  requirements.txt
.streamlit/: secrets.toml
src/geminipythonbot/: __init__.py  app.py
